Added auth routes for login and refresh token.
