# docs/swagger/swagger.json
@@ -4,6 +4,98 @@
         "contact": {}
     },
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Login a user, on success get the refreshToken and accessToken",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login user",
+                "parameters": [
+                    {
+                        "description": "Login request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Login response",
+                        "schema": {
+                            "$ref": "#/definitions/auth.LoginRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Default response",
+                        "schema": {
+                            "$ref": "#/definitions/utils.MessageRes"
+                        }
+                    },
+                    "401": {
+                        "description": "Default response",
+                        "schema": {
+                            "$ref": "#/definitions/utils.MessageRes"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/refresh-token": {
+            "post": {
+                "description": "Refresh token, send the new access token based on refresh token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh token",
+                "parameters": [
+                    {
+                        "description": "Refresh token request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.RefreshTokenReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Refresh token response",
+                        "schema": {
+                            "$ref": "#/definitions/auth.RefreshTokenRes"
+                        }
+                    },
+                    "400": {
+                        "description": "Default response",
+                        "schema": {
+                            "$ref": "#/definitions/utils.MessageRes"
+                        }
+                    },
+                    "401": {
+                        "description": "Default response",
+                        "schema": {
+                            "$ref": "#/definitions/utils.MessageRes"
+                        }
+                    }
+                }
+            }
+        },
         "/users/register": {
             "post": {
                 "description": "Register a new user with the provided details",
@@ -24,7 +116,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CreateUserReq"
+                            "$ref": "#/definitions/user.CreateUserReq"
                         }
                     }
                 ],
@@ -32,13 +124,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserRes"
+                            "$ref": "#/definitions/user.UserRes"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     }
                 }
@@ -70,13 +162,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserRes"
+                            "$ref": "#/definitions/user.UserRes"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     }
                 }
@@ -108,13 +200,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     }
                 }
@@ -147,7 +239,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.ResetPasswordReq"
+                            "$ref": "#/definitions/user.ResetPasswordReq"
                         }
                     }
                 ],
@@ -155,13 +247,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     }
                 }
@@ -194,7 +286,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdateUserReq"
+                            "$ref": "#/definitions/user.UpdateUserReq"
                         }
                     }
                 ],
@@ -202,13 +294,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.UserRes"
+                            "$ref": "#/definitions/user.UserRes"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/models.MessageRes"
+                            "$ref": "#/definitions/utils.MessageRes"
                         }
                     }
                 }
@@ -216,7 +308,52 @@
         }
     },
     "definitions": {
-        "models.CreateUserReq": {
+        "auth.LoginReq": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.LoginRes": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.RefreshTokenReq": {
+            "type": "object",
+            "required": [
+                "refresh_token"
+            ],
+            "properties": {
+                "refresh_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "auth.RefreshTokenRes": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.CreateUserReq": {
             "type": "object",
             "required": [
                 "email",
@@ -250,18 +387,7 @@
                 }
             }
         },
-        "models.MessageRes": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                },
-                "success": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "models.ResetPasswordReq": {
+        "user.ResetPasswordReq": {
             "type": "object",
             "required": [
                 "current_password",
@@ -281,7 +407,7 @@
                 }
             }
         },
-        "models.UpdateUserReq": {
+        "user.UpdateUserReq": {
             "type": "object",
             "required": [
                 "id",
@@ -310,7 +436,7 @@
                 }
             }
         },
-        "models.UserRes": {
+        "user.UserRes": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -333,6 +459,17 @@
                 },
                 "udapted_at": {
                     "type": "string"
+                }
+            }
+        },
+        "utils.MessageRes": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         }
